Remove scrollbar and fix items on page.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -11,6 +11,10 @@ html {
 	scroll-behavior: smooth;
 }
 
+html::-webkit-scrollbar {
+	width: 0;
+}
+
 body {
 	box-sizing: border-box;
 	overflow-y: scroll;
